fix: 🐛 place scrollbar inside of page content only

--- a/src/popup/components/tabs/tabs.scss
+++ b/src/popup/components/tabs/tabs.scss
@@ -1,6 +1,4 @@
 .tab-bar {
-  position: fixed;
-  bottom: 0;
   display: flex;
   width: 100%;
   justify-content: space-between;
