--- a/src/popup/pages/shop/shop.scss
+++ b/src/popup/pages/shop/shop.scss
@@ -1,30 +1,26 @@
 .shop-page {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 10px;
-    margin-bottom: 56px;
+  padding: 10px;
 }
 
 .category-divider {
-    background-color: rgba(black, 0.05);
-    height: 1px;
-    width: 90%;
-    margin: 24px auto;
+  background-color: rgba(black, 0.05);
+  height: 1px;
+  width: 90%;
+  margin: 24px auto;
 }
 
 .list-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 12px 12px 16px;
-    font-weight: 500;
-    font-size: 13px;
-    color: rgba(#434D5A, 0.75);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 12px 12px 16px;
+  font-weight: 500;
+  font-size: 13px;
+  color: rgba(#434d5a, 0.75);
 
-    &__action {
-        font-weight: 500;
-        font-size: 12px;
-        color: #4F6EF7;
-    }
+  &__action {
+    font-weight: 500;
+    font-size: 12px;
+    color: #4f6ef7;
+  }
 }
